Add SQLite to permanent embedded JDBC benchmark authority